unpackaged/main/default/objects/Test_Book_Item__c/Test_Book_Item__c.object-meta.xml
<CustomObject>
    <description>Junction: which cases are in which book, with Sort Order carrying the intended run order.</description>
    <label>Test Book Item</label>
    <nameField>
        <displayFormat>TBI-{00000}</displayFormat>
        <label>Test Book Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Book Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>