unpackaged/main/default/objects/Test_Book_Item__c/fields/Test_Book__c.field-meta.xml
<CustomField>
    <fullName>Test_Book__c</fullName>
    <description>Owning book.</description>
    <label>Test Book</label>
    <referenceTo>Test_Book__c</referenceTo>
    <relationshipLabel>Test Book Items</relationshipLabel>
    <relationshipName>Test_Book_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>