unpackaged/main/default/objects/Test_Book_Item__c/fields/Test_Case__c.field-meta.xml
<CustomField>
    <fullName>Test_Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The case in the book. Restricted delete: a case referenced by a book cannot be deleted.</description>
    <label>Test Case</label>
    <referenceTo>Test_Case__c</referenceTo>
    <relationshipLabel>Test Book Items</relationshipLabel>
    <relationshipName>Test_Book_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>